--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,84 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* react-tinder-card styles */
+#root {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  min-height: 100vh;
+  overflow: hidden;
+  background-color: #63c7b2;
+}
+
+#root>div {
+  width: 260px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+h1 {
+  /* font-family: 'Alatsi', sans-serif; */
+  font-family: 'Damion', cursive;
+  /* color: #F38D68; */
+  color: #263d42;
+  text-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30);
+}
+
+.swipe {
+  position: absolute;
+}
+
+.cardContainer {
+  width: 90vw;
+  max-width: 260px;
+  height: 300px;
+}
+
+.card {
+  position: relative;
+  background-color: #fff;
+  width: 80vw;
+  max-width: 260px;
+  height: 300px;
+  box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30);
+  border-radius: 20px;
+  background-size: cover;
+  background-position: center;
+}
+
+.cardContent {
+  width: 100%;
+  height: 100%;
+}
+
+.card h3 {
+  position: absolute;
+  bottom: 0;
+  margin: 10px;
+  color: #263d42;
+}
+
+.infoText {
+  width: 100%;
+  height: 28px;
+  justify-content: center;
+  display: flex;
+  /* color: #F38D68; */
+  color: #fff;
+  animation: popup 200ms;
+}
+
+@keyframes popup {
+  0% {
+    transform: scale(0);
+  } 70% {
+    transform: scale(1.1);
+  } 85% {
+    transform: scale(0.94);
+  } 100% {
+    transform: scale(1);
   }
 }
