--- a/src/App.css
+++ b/src/App.css
@@ -40,10 +40,11 @@
 }
 
 #root>div {
-  width: 260px;
+  width: 100%;;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 h1 {
