--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   width: 100%;;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
